--- a/firefox-extension-bitwarden/PKGBUILD
+++ b/firefox-extension-bitwarden/PKGBUILD
@@ -1,18 +1,36 @@
-pkgname=firefox-extension-bitwarden
-pkgver=2023.1.0
-_mozid=4054938
-pkgrel=1
-pkgdesc='Bitwarden addon for Firefox'
-arch=('any')
-url='https://addons.mozilla.org/en-US/firefox/addon/bitwarden-password-manager/'
-license=('GPLV3')
-depends=('firefox')
-groups=('firefox-addons')
-source=("firefox-bitwarden-${pkgver}.xpi::https://addons.mozilla.org/firefox/downloads/file/${_mozid}/bitwarden_free_password_manager-${pkgver}-an+fx.xpi")
-noextract=("firefox-bitwarden-${pkgver}.xpi")
-sha512sums=('12bc4a05e670d28c8b970d58f853e6dd9628d45c85f2d94331ab08f358c48bafafb3bee06acab98931ca7b1bfb84dd7412b3355040cd4829b5367c9239dd0adb')
+# Maintainer: Matt Harrison <matt@harrison.us.com>
+# Contributor: David Hummel <hummeltech@sherpaguru.com>
+# Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
-package() {
-  install -Dm644 "firefox-bitwarden-${pkgver}.xpi" "${pkgdir}/usr/lib/firefox/browser/extensions/{446900e4-71c2-419f-a6a7-df9c091e268b}.xpi"
+pkgname=firefox-extension-bitwarden
+pkgver=2024.8.0
+pkgrel=1
+pkgdesc='Bitwarden browser extension for Firefox'
+arch=('any')
+url='https://github.com/bitwarden/clients'
+license=('GPL-3.0-or-later')
+optdepends=('firefox')
+groups=('firefox-addons')
+pkgdesc='Bitwarden browser extension for Firefox'
+makedepends=('nodejs' 'npm' 'unzip')
+source=("${pkgname}-${pkgver}.tar.gz::https://github.com/bitwarden/clients/archive/refs/tags/browser-v${pkgver}.tar.gz")
+sha256sums=('920173232d67b883ee98369856ca162d18bd817c031d7709b8459c4d22f1dd08')
+
+prepare() {
+  cd "${srcdir}/clients-browser-v${pkgver}" || exit
+  npm ci
 }
 
+build() {
+  cd "${srcdir}/clients-browser-v${pkgver}/apps/browser" || exit
+  npm run dist:firefox
+}
+
+check() {
+  cd "${srcdir}/clients-browser-v${pkgver}/apps/browser" || exit
+  npm run test
+}
+
+package() {
+  install -Dm644 "${srcdir}/clients-browser-v${pkgver}/apps/browser/dist/dist-firefox.zip" "${pkgdir}/usr/lib/firefox/browser/extensions/{446900e4-71c2-419f-a6a7-df9c091e268b}.xpi"
+}
