--- a/wordfence-cli/PKGBUILD
+++ b/wordfence-cli/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=wordfence-cli
-pkgver=4.0.3
+pkgver=5.0.1
 pkgrel=1
 pkgdesc="A modern and fast real-time MIDI player written in Rust."
 url="https://github.com/wordfence/wordfence-cli"
 arch=('any')
 license=('GPL-3.0-only')
-depends=(python python-packaging python-requests)
+depends=(python python-packaging python-requests python-pymysql)
 makedepends=(python-build python-installer python-wheel python-setuptools)
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/wordfence/wordfence-cli/archive/refs/tags/v$pkgver.tar.gz")
-b2sums=('d90b4e06abe16fbc50133c51235116a483f69714f0bcd487bb62eac4d0ae1bb3c15c29ca5948b08b921c8c8e8e0636bbfaf9ca93f8374e5d7943935baf5ca6db')
+b2sums=('61fd543d7265191952c3a554331a2fb8e7ee7aa7e2c69eb9b1074cc1f97137ad4b987c1e888582df1d1257951e30b3768aecc4b7a9fb2495e8436ac87dc6f606')
 
 build() {
   cd "$pkgname-$pkgver"
