--- a/firefox-extension-bitwarden-personal/PKGBUILD
+++ b/firefox-extension-bitwarden-personal/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=firefox-extension-bitwarden-personal
-pkgver=2024.11.2
+pkgver=2024.12.1
 pkgrel=1
 pkgdesc='Bitwarden browser extension for Firefox - Matt Edition'
 arch=('any')
@@ -12,12 +12,14 @@ license=('GPL-3.0-or-later')
 optdepends=('firefox')
 groups=('firefox-addons')
 pkgdesc='Bitwarden browser extension for Firefox'
-makedepends=('nodejs' 'npm' 'unzip' 'imagemagick' 'perl' 'ttf-droid')
+makedepends=('nodejs' 'npm' 'unzip' 'imagemagick' 'perl' 'ttf-droid' 'zip')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/bitwarden/clients/archive/refs/tags/browser-v${pkgver}.tar.gz")
-sha256sums=('406a9cc31414d64b90954d7a6217703c013a53261568e8a101891d69494d8ce5')
+b2sums=('3cc52678849e26bbb6282ff35290cc431a9dc258b115964ef84bf45b2811c03e0e62124977bc8c672ca9223b363cbf6a6b77ecb074ef54afaabd53345297e732')
 
 prepare() {
   cd "${srcdir}/clients-browser-v${pkgver}" || exit
+  # Starting in 2024.12.0 it uses powershell to create the zip. Rather than requiring powershell to build this, we just create the zip in the build step.
+  sed -i 's| \&\& \.\/scripts\/compress\.ps1 dist-firefox\.zip||' apps/browser/package.json
   npm ci
 }
 
@@ -28,27 +30,18 @@ build() {
   find . -type f -exec perl -pi -e 's/"Bitwarden Password Manager"/"Bitwarden - Matt"/go;' {} \;
   find . -type f -exec perl -pi -e 's/446900e4-71c2-419f-a6a7-df9c091e268b/37c30bda-db14-4b06-aeb1-a1998de1a766/go;' {} \;
   find . -type f -exec perl -pi -e 's{<title>Bitwarden</title>}{<title>Bitwarden - Matt</title>}go;' {} \;
-  mkdir -p newimages
   for file in src/images/*; do
-    case $file in
-      *128)
-        pointsize="-pointsize 24"
-        ;;
-      *32*|*38*|*48*)
-        pointsize="-pointsize 18"
-        ;;
-      *16*|*18*|*19*)
-        pointsize="-pointsize 10"
-        ;;
-      *)
-        pointsize=""
-        ;;
-    esac
+    # if file is svg, skip it
+    if [[ $file == *.svg ]]; then
+        continue
+    fi
 
-    composite $pointsize label:"MH" -gravity NorthWest $file newimages/`basename $file`
+    # change color of the icon to green
+    magick "$file" -modulate 100,70,60 "$file"
   done
-  cp newimages/* src/images/
   npm run dist:firefox
+  cd build
+  zip -r ../dist/dist-firefox.zip .
 }
 
 check() {
