--- a/iwqt/PKGBUILD
+++ b/iwqt/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=iwqt
-pkgver=0.0.2
+pkgver=0.0.3
 pkgrel=1
 pkgdesc="An iwd network applet for linux systems"
 url="https://github.com/FinGu/iwqt"
 arch=('x86_64')
 license=('GPL-3.0-only')
-depends=('iwd' 'qt6-base' 'sdbus-cpp')
+depends=('iwd' 'qt6-base' 'qt6-svg' 'sdbus-cpp' 'gcc-libs' 'glibc')
 makedepends=('meson' 'cmake')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/FinGu/iwqt/archive/refs/tags/v${pkgver}.tar.gz")
-b2sums=('8f4421d35ea465dff4232962b1ad4485dede2e043565d6108beaceb20b2f470d233f2ea94d1b41faa3660f3e8ca96c7b15d846c3e94a774171142b0214ec672c')
+b2sums=('cc8d0b3d90e949ab8f130c4b19048fafbffe5b987f0ee163d87ea44e68f92e8daa2d8e98c3954473dcec8045881a44376eb4a96d5ed8d0d3eda6df01267be311')
 
 prepare() {
   cd "${srcdir}/${pkgname}-${pkgver}"
