--- a/mago/PKGBUILD
+++ b/mago/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=mago
-pkgver=1.0.0.alpha.12
-_pkgver=1.0.0-alpha.12
+pkgver=1.0.0.beta.10
+_pkgver=1.0.0-beta.10
 pkgrel=1
 pkgdesc="A CLI text viewer tool that works interactively like less command on small pane within the terminal window."
 url="https://github.com/carthage-software/mago"
@@ -12,7 +12,7 @@ license=('MIT')
 depends=('gcc-libs' 'glibc')
 makedepends=('cargo-nightly' 'openssl')
 source=("${pkgname}-${_pkgver}.tar.gz::https://github.com/carthage-software/mago/archive/refs/tags/${_pkgver}.tar.gz")
-b2sums=('a33ef7ff608f10e1dd7c03d933ee532f03b1cd26d50db61bbede73f53835151d01bdad950a207e17e8de1a8abbe8a28aa71658f133ee784ca3c0e4130f830897')
+b2sums=('04677e30925a6da1dd63305a06ae45787a1bfe4599c1b5ca3315a2da0410ef288395448cb36225ddc761386b0d7be245b788d5fc0baf84257a67c5177141ee48')
 
 prepare() {
   cd "${srcdir}/${pkgname}-${_pkgver}"
