--- a/wasabi/PKGBUILD
+++ b/wasabi/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=wasabi
-pkgver=1.0.2
+pkgver=1.0.3
 pkgrel=1
 pkgdesc="A modern and fast real-time MIDI player written in Rust."
 url="https://github.com/BlackMIDIDevs/wasabi"
 arch=('x86_64' 'armv7h' 'aarch64')
 license=('GPL-3.0-only')
-depends=('alsa-lib' 'gcc-libs' 'openssl')
-makedepends=('cargo-nightly' 'cmake' 'git' 'shaderc')
+depends=('alsa-lib' 'gcc-libs' 'glibc')
+makedepends=('cargo-nightly' 'cmake' 'git' 'shaderc' 'openssl')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/BlackMIDIDevs/wasabi/archive/refs/tags/v${pkgver}.tar.gz")
-b2sums=('320f3a475948ec37d4c0be5578f9b4780377e2ae807be9f2300c4211e967c1807dbc1e20f059181725e2a36f60177e3e2cc6f8d4dbfb968adf3190a60b5d5e60')
+b2sums=('0f44f662f895c8330e0c35513db3146012237fc37bda55f2c68d30444066968a5530d792ab7bdd49da8190e3d55292a86431cbd9c0700bc8d14c8cba69c862f5')
 
 prepare() {
   cd "${srcdir}/${pkgname}-${pkgver}"
