--- a/mago/PKGBUILD
+++ b/mago/PKGBUILD
@@ -2,26 +2,26 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=mago
-pkgver=1.0.0.beta.14
-_pkgver=1.0.0-beta.14
+pkgver=1.0.0_beta.16
+_pkgver=1.0.0-beta.16
 pkgrel=1
 pkgdesc="A CLI text viewer tool that works interactively like less command on small pane within the terminal window."
 url="https://github.com/carthage-software/mago"
 arch=('x86_64')
 license=('MIT')
 depends=('gcc-libs' 'glibc')
-makedepends=('cargo-nightly' 'openssl')
-source=("${pkgname}-${_pkgver}.tar.gz::https://github.com/carthage-software/mago/archive/refs/tags/${_pkgver}.tar.gz")
-b2sums=('c39c2d6057a212df062767a8d405cd76f563f4e5791d959e471ff79d5039049ec57815ffb637eb6b6d9f7a622bec5d92f1e91ea75f5c062a20b4ba31d4451d5c')
+makedepends=('git' 'cargo-nightly' 'openssl')
+source=("git+https://github.com/carthage-software/mago.git#tag=${_pkgver}")
+b2sums=('a80dca9032de5be579e63d71299e185a948d9f98447a4f16e20e41e8c13302195e78b070abc6e583246b3f7b110ee1bcf5c51500e3abcabe232295fb00c033a7')
 
 prepare() {
-  cd "${srcdir}/${pkgname}-${_pkgver}"
+  cd "${srcdir}/${pkgname}"
   export RUSTUP_TOOLCHAIN=stable
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
-  cd "${srcdir}/${pkgname}-${_pkgver}"
+  cd "${srcdir}/${pkgname}"
   export CFLAGS="$CFLAGS -ffat-lto-objects"
   export RUSTFLAGS="${RUSTFLAGS} --remap-path-prefix $srcdir=src"
   export RUSTUP_TOOLCHAIN=stable
@@ -30,13 +30,13 @@ build() {
 }
 
 check() {
-  cd "${srcdir}/${pkgname}-${_pkgver}"
+  cd "${srcdir}/${pkgname}"
   export RUSTUP_TOOLCHAIN=stable
   cargo test --frozen --all-features
 }
 
 package() {
-  cd "${srcdir}/${pkgname}-${_pkgver}"
+  cd "${srcdir}/${pkgname}"
   install -Dm0755 -t "${pkgdir}/usr/bin/" "target/release/${pkgname}"
   install -Dm644 -t "${pkgdir}/usr/share/licenses/${pkgname}/" LICENSE-MIT
   install -Dm644 -t "${pkgdir}/usr/share/licenses/${pkgname}/" LICENSE-APACHE
