--- a/mago/PKGBUILD
+++ b/mago/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=mago
-pkgver=1.0.0_rc.1
-_pkgver=1.0.0-rc.1
+pkgver=1.0.0_rc.2
+_pkgver=1.0.0-rc.2
 pkgrel=1
 pkgdesc="A CLI text viewer tool that works interactively like less command on small pane within the terminal window."
 url="https://github.com/carthage-software/mago"
 arch=('x86_64')
 license=('MIT')
 depends=('gcc-libs' 'glibc')
-makedepends=('git' 'cargo-nightly' 'openssl')
+makedepends=('git' 'cargo' 'openssl')
 source=("git+https://github.com/carthage-software/mago.git#tag=${_pkgver}")
-b2sums=('74c5bad18a8b32941cce335bdbe02572f6fc3c1b8db7ecc146ba46ff0e612dec902e8b98a9416b15b9d54f95eb50c1e69f9f4fa25939eb547ebfd85fbfb92298')
+b2sums=('7b336921bd5f8e62cae7e1801771bb8b71b1696465e7d159a2f2e77fc2c5076fcd644f95a952cc25209abf1ab24811d1f2a3f1840d26f4f18a0ce528416efe23')
 
 prepare() {
   cd "${srcdir}/${pkgname}"
