--- a/mago/PKGBUILD
+++ b/mago/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=mago
-pkgver=1.0.2
+pkgver=1.0.3
 pkgrel=1
 pkgdesc="An extremely fast PHP linter, formatter, and static analyzer, written in Rust."
 url="https://github.com/carthage-software/mago"
@@ -11,7 +11,7 @@ license=('MIT')
 depends=('gcc-libs' 'glibc')
 makedepends=('git' 'cargo' 'openssl')
 source=("git+https://github.com/carthage-software/mago.git#tag=${pkgver}")
-b2sums=('7848ecf545ef654d126328701905ee0355bc6bc302072cecc91ba470ccca4e9a8a31756cb50238ea18d3d29d378f70688bea6422a7589117cdac5eef8b53a979')
+b2sums=('e3a7e8561f760cd08d69e330a7f2e33b91017f33d00415d97dbd666ae28a2a4a9f3a5792f5b09f1b62209075ad4c73d3582dcd7af5db4d8c29390c4834d9e7f3')
 
 prepare() {
   cd "${srcdir}/${pkgname}"
@@ -25,13 +25,13 @@ build() {
   export RUSTFLAGS="${RUSTFLAGS} --remap-path-prefix $srcdir=src"
   export RUSTUP_TOOLCHAIN=stable
   export CARGO_TARGET_DIR=target
-  cargo build --frozen --release --all-features
+  cargo build --frozen --release
 }
 
 check() {
   cd "${srcdir}/${pkgname}"
   export RUSTUP_TOOLCHAIN=stable
-  cargo test --frozen --all-features
+  cargo test --frozen
 }
 
 package() {
